--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ defaults:
 jobs:
   build:
     name: Build
-    runs-on: macos-14
+    runs-on: macos-latest
 
     env: # use tag version, if available, falling back to 1.22.1 (stable)
       MITKERBEROS_VERSION: "${{ startsWith(github.ref, 'refs/tags/1.') && github.ref_name || '1.22.1_openssl-3.6.0' }}"
@@ -31,7 +31,7 @@ jobs:
 
     steps:
     - name: checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: restore cache
       id: cache-mitkerberos-src
@@ -53,7 +53,7 @@ jobs:
           build/mitkerberos-${{ env.MITKERBEROS_VERSION }}.tar.gz
 
     - name: publish native libraries
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v5
       with:
         name: "mitkerberos-${{ env.MITKERBEROS_VERSION }}"
         retention-days: 5
@@ -62,7 +62,7 @@ jobs:
           build/mitkerberos-${{ env.MITKERBEROS_VERSION }}/macosx/**
 
     - name: publish xcframework
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v5
       with:
         name: "mitkerberos-${{ env.MITKERBEROS_VERSION }}.xcframework"
         retention-days: 5
